fixed flicker on progress

--- a/css/style.css
+++ b/css/style.css
@@ -3,6 +3,7 @@ body{
 	font-family: 'Ubuntu', sans-serif;
 	color: #8A8585;
 	background-color: #000;
+  text-align: center;
 }
 
 
@@ -29,12 +30,16 @@ video::-webkit-media-controls-enclosure {
 
 #video-controls{
 	position: absolute;
-  	background-color: #000;
+  background-color: #000;
 	width: 61.55%;
 	top: 206px;
 	margin: 0 70px;
 	opacity: .7;
-    z-index: 2147483647;
+  z-index: 2147483647;
+}
+
+#wrapper:hover{
+  display: block;
 }
 
 
@@ -42,27 +47,17 @@ video::-webkit-media-controls-enclosure {
 Buttons/progress bar
 ******************************************/
 
-/*#play-pause,
-.volume-btn,
-.mute-btn,
-.full-screen,
-#duration
-#current{
-	display: none;
-}
-*/
-
 button{
 	background-color: #000;
 	border-color: #000;
 	margin-top: 1px;
-  	float: right;
+  float: right;
 }
 
 progress{
   width: 100%;
   height: 3px;
-  background-color: green;
+  background-color: #8A8585;
 }
 
 progress:before {
@@ -115,7 +110,7 @@ Caption
 }
 
 .highlight{
-	background-color: #245F2B;
+	background-color: #8E252A;
 }
 
 /******************************************
